src/test/ui/const-generics/issues/issue-69654.stderr
error[E0423]: expected value, found type parameter `T`
  --> $DIR/issue-69654.rs:5:25
   |
LL | impl<T> Bar<T> for [u8; T] {}
   |                         ^ not a value

error[E0599]: no function or associated item named `foo` found for struct `Foo<{_: usize}>` in the current scope
  --> $DIR/issue-69654.rs:17:10
   |
LL | struct Foo<const N: usize> {}
   | -------------------------- function or associated item `foo` not found for this
...
LL |     Foo::foo();
   |          ^^^ function or associated item not found in `Foo<{_: usize}>`
   |
   = note: the method `foo` exists but the following trait bounds were not satisfied:
           `[u8; _]: Bar<[(); _]>`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0423, E0599.
For more information about an error, try `rustc --explain E0423`.
